# crypto_ticker

./: .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/ap_server/: CMakeLists.txt  ap_server.c
components/ap_server/include/: ap_server.h
components/epaper/: CMakeLists.txt  Kconfig  crypto.cpp  epaper.c  epd2in9_V2.cpp  epdif.cpp  helper.cpp  https_request.cpp  testimage.cpp
components/epaper/include/: binancecoin_image.h  btc_image.h  cardano_image.h  chainlink_image.h  crypto.h  dogecoin_image.h  epaper.h  epd2in9_V2.h  epdif.h  epdpaint.h  eth_image.h  fonts.h  helper.h  https_request.h  polkadot_image.h  stellar_image.h  testimage.h  tether_image.h  uniswap_image.h
main/: CMakeLists.txt  main.cpp
